--- a/styles.css
+++ b/styles.css
@@ -247,8 +247,8 @@ h2 {
 footer {
     text-align: center;
     padding: 20px;
-    background-color: #f6f624;
-    color:#000000;
+    background-color: #000000;
+    color:#f6f624;
 }
 * {
     margin: 0;
